Feature/unux 151 sql refactor (#44)
* fix: correct orderBy field mapping and set default page size to 10

* refactor: change SQL stats pagination

* feat: add loading spinner for line chart

* feat: add orderBy for sql filter